<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceOfRent"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/rentPriceText"
        android:hint="@string/rent"
        android:text="@string/zero"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/numbOfPeople"
        android:id="@+id/textView2"
        android:layout_below="@+id/rentPriceText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/peopleAmountText"
        android:hint="@string/numbOfPeopleHint"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignEnd="@+id/rentPriceText"
        android:layout_alignRight="@+id/rentPriceText"
        android:layout_alignParentRight="true"
        android:text="@string/zero" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_down"
        android:id="@+id/rentDownBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_up"
        android:id="@+id/rentUpBtn"
        android:layout_above="@+id/rentDownBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_down"
        android:id="@+id/peopleDownBtn"
        android:layout_alignTop="@+id/rentDownBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_up"
        android:id="@+id/peopleUpBtn"
        android:layout_alignBottom="@+id/rentUpBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rentController"
        android:id="@+id/textView3"
        android:layout_above="@+id/rentUpBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/peopleController"
        android:id="@+id/textView4"
        android:layout_above="@+id/peopleUpBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/peopleAmountText"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/output"
            android:id="@+id/outputTextView"
            android:layout_below="@+id/peopleAmountText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/textView3" />

    </android.support.v7.widget.CardView>

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/calculateFabButton"
        android:background="@drawable/circle"
        android:src="@drawable/ic_equal"
        android:contentDescription="@string/fab"

        android:stateListAnimator="@drawable/fab_light"
        android:elevation="2dp"
        android:layout_below="@+id/peopleAmountText"
        android:layout_alignRight="@+id/peopleAmountText"
        android:layout_alignEnd="@+id/peopleAmountText"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp" />

</RelativeLayout>